--- a/app/index.html
+++ b/app/index.html
@@ -17,15 +17,43 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/moz-keyframes.css">
+    <link rel="stylesheet" href="styles/webkit-keyframes.css">
+    <link rel="stylesheet" href="styles/o-keyframes.css">
+
     <!-- endbuild -->
   </head>
   <body ng-app="pptHeroApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <div id="background">
+      <div id="sky">
+        <div class="cloud-1"></div>
+        <div class="cloud-2"></div>
+        <div class="cloud-3"></div>
+        <div class="cloud-4"></div>
+      </div>
+      <div id="horizon">
+        <div class="hor-bg-1"></div>
+        <div class="hor-bg-2"></div>
+        <div class="hor-bg-3"></div>
+      </div>
+      <div id="floor"></div>
+      <div id="hero"></div>
 
+    </div>
     <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+    <div class="container">
+    <div class="header">
+      <ul class="nav nav-pills pull-right" ng-controller="MainCtrl">
+        <li ng-repeat="role in roles"><a ng-href="/#/{{role}}" >{{role}}</a></li>
+      </ul>
+      <h3 class="text-muted">ppt_hero</h3>
+    </div>
+  </div>
+    <div class="alert alert-info" ng-show="status">{{status}}</div>
+    <div id="main-container" class="container" ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -52,12 +80,21 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/hero.js"></script>
+        <script src="scripts/controllers/job.js"></script>
+        <script src="scripts/controllers/weapon.js"></script>
+        <script src="scripts/controllers/race.js"></script>
+        <script src="scripts/factories/jobFactory.js"></script>
+        <script src="scripts/factories/weaponFactory.js"></script>
+        <script src="scripts/factories/raceFactory.js"></script>
+        <script src="scripts/factories/heroFactory.js"></script>
         <!-- endbuild -->
 </body>
 </html>
